# esp32-demos

./: .gitignore
ble-led-control/: CMakeLists.txt
ble-led-control/main/: CMakeLists.txt  Kconfig.projbuild  main.c
desktop-gadget/: CMakeLists.txt
desktop-gadget/main/: CMakeLists.txt  Kconfig.projbuild  clock_ui.c  clock_ui.h  main.c  ntp_sync.c  ntp_sync.h  oled_driver.c  oled_driver.h  wifi_manager.c  wifi_manager.h
face-detection/: CMakeLists.txt
face-detection/main/: CMakeLists.txt  idf_component.yml
led-pwm/: .clang-format  CMakeLists.txt
led-pwm/main/: CMakeLists.txt  Kconfig.projbuild  main.c
web-cam/: CMakeLists.txt  README.md
web-cam/main/: CMakeLists.txt  Kconfig.projbuild  app_camera.c  app_camera.h  app_httpd.c  app_httpd.h  app_wifi.c  app_wifi.h  main.c
